--- a/source/_static/node.conf
+++ b/source/_static/node.conf
@@ -8,7 +8,7 @@
 #   sync#* resources defined in the service configurations. So no
 #   sync schedule should be explicitely defined here.
 #
-#   The internal schedule default for  push actions is:
+#   The internal schedule default for push actions is:
 #     push actions          00:00-06:00@361 mon-sun
 #     sync actions          04:00-06:00@121 mon-sun
 #     compliance actions    02:00-06:00@241 sun
@@ -125,6 +125,15 @@
 ;dbcompliance = https://collector.opensvc.com/init/compliance/call/xmlrpc
 
 #
+# 'branch'
+#   Set the targeted opensvc agent branch. The downloaded upgrades will
+#   honor that branch.
+#   The default is 'not set', which means the repopkg imposes the target
+#   branch, which is not recommended with a public repopkg.
+#
+;branch = 1.9
+
+#
 # 'repo'
 #   Set the uri of the opensvc agent package repository and compliance
 #   modules gzipped tarball repository. This parameter is used by
@@ -231,11 +240,11 @@ rejoin_grace_period = 90
 ;auto_update = False
 
 [stats]
-;schedule = @59
+;schedule = @60
 ;disable = blockdev, mem_u
 
 [checks]
-;schedule = @119
+;schedule = @120
 
 [packages]
 ;schedule = @1440 sun
@@ -244,46 +253,46 @@ rejoin_grace_period = 90
 ;schedule = @1440 sun
 
 [asset]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [nsr]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [dcs]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [hds]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [necism]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [eva]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [ibmsvc]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [vioserver]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [brocade]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [disks]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [sym]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [svcconf]
-;schedule = 04:00-06:00@120
+;schedule = 04:00-05:59@120
 
 [appinfo]
-;schedule = @119
+;schedule = @120
 
 [rotate_root_pw]
-;schedule = 04:00-06:00@120 sun
+;schedule = 04:00-05:59@120 sun
 
 #
 # In pull action mode, the collector sends a tcp packet to the server
