Add nodemgr to om translation

--- a/source/_static/auth.conf
+++ b/source/_static/auth.conf
@@ -12,7 +12,7 @@
 #
 # Symmetrix array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<symid>]
@@ -52,7 +52,7 @@ password = mypass
 #
 # Centera array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
@@ -94,7 +94,7 @@ password = mypass
 #
 # Netapp array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
@@ -124,7 +124,7 @@ key = /root/.ssh/id_rsa
 #
 # VNX array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
@@ -176,7 +176,7 @@ password = mypass
 #
 # 3par array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
@@ -230,7 +230,7 @@ cli = /opt/hp3par/bin/cli
 #
 # hds array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<manager name>]
@@ -281,7 +281,7 @@ jre_path = /opt/java/bin
 #
 # freenas array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
@@ -310,7 +310,7 @@ password = mypass
 #
 # xtremio array
 #
-# This section is necessary for inventoring and nodemgr array
+# This section is necessary for inventoring and om node array
 # commands. Each array must have its own section.
 #
 [<array name>]
