--- a/source/_static/node.conf
+++ b/source/_static/node.conf
@@ -100,11 +100,11 @@
 #
 #   vanilla install
 #   install opensvc
-#   nodemgr set --param node.loc_city = Paris
-#   nodemgr set --param node.team_responsible = Homies
-#   nodemgr pushasset --force
-#   nodemgr compliance attach moduleset --moduleset sys.core
-#   nodemgr compliance fix
+#   om node set --param node.loc_city = Paris
+#   om node set --param node.team_responsible = Homies
+#   om node pushasset --force
+#   om node compliance attach moduleset --moduleset sys.core
+#   om node compliance fix
 #
 ;loc_country = France
 ;loc_city = Paris
@@ -137,7 +137,7 @@
 # 'repo'
 #   Set the uri of the opensvc agent package repository and compliance
 #   modules gzipped tarball repository. This parameter is used by
-#   'nodemgr updatepkg' and 'nodemgr updatecomp' commands
+#   'om node updatepkg' and 'om node updatecomp' commands
 #
 # ROOT
 # +- compliance
@@ -159,7 +159,7 @@
 #
 # 'repopkg'
 #   Set the uri of the opensvc agent package repository. This parameter
-#   is used by'nodemgr updatepkg' command. The repository file tree must
+#   is used by'om node updatepkg' command. The repository file tree must
 #   be organized as:
 #
 # ROOT
@@ -178,7 +178,7 @@
 #
 # 'repocomp'
 #   Set the uri of the opensvc compliance modules gzipped tarbal repository.
-#   This parameter is used by'nodemgr updatecomp' command.
+#   This parameter is used by'om node updatecomp' command.
 #
 # ROOT
 # +- compliance.tar.gz
@@ -297,7 +297,7 @@ rejoin_grace_period = 90
 #
 # In pull action mode, the collector sends a tcp packet to the server
 # to notify there are actions to unqueue. The system's inetd sysstem
-# must be configured to execute "nodemgr dequeue actions" upon
+# must be configured to execute "om node dequeue actions" upon
 # receive. The listener.port parameter is sent to the collector upon
 # pushasset. The collector uses this port to notify the node.
 #
